Удалит ненужные зависимости, исправит дто, маперы, контроллеры, сервисы категорий и продуктов с учетом валидации