@@ -1,15 +1,19 @@
 package ru.otus.hw.controllers;
 
+import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
+import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 import ru.otus.hw.models.dto.CategoryDto;
 import ru.otus.hw.models.entities.Category;
+import ru.otus.hw.models.interfaces.OnCreate;
+import ru.otus.hw.models.interfaces.OnUpdate;
 import ru.otus.hw.services.CategoryService;
 import ru.otus.hw.components.mappers.CategoryMapper;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/categories")
@@ -18,39 +22,40 @@ import java.util.stream.Collectors;
 public class CategoryController {
 
     private final CategoryService categoryService;
-
     private final CategoryMapper categoryMapper;
 
     @GetMapping
     public List<CategoryDto> getAllCategories() {
         return categoryService.findAll().stream()
                 .map(categoryMapper::toDto)
-                .collect(Collectors.toList());
+                .toList(); // Java 16+ сокращение вместо collect(Collectors.toList())
     }
 
     @GetMapping("/{id}")
     public CategoryDto getCategoryById(@PathVariable UUID id) {
-        Category category = categoryService.findByIdNN(id);
-        return categoryMapper.toDto(category);
+        return categoryMapper.toDto(categoryService.findByIdNN(id));
     }
 
     @PostMapping
-    public CategoryDto createCategory(@RequestBody CategoryDto categoryDto) {
+    @ResponseStatus(HttpStatus.CREATED)
+    public CategoryDto createCategory(@RequestBody @Validated(OnCreate.class) CategoryDto categoryDto) {
         Category category = new Category();
         category.setName(categoryDto.getName());
-        Category savedCategory = categoryService.save(category);
-        return categoryMapper.toDto(savedCategory);
+        return categoryMapper.toDto(categoryService.save(category));
     }
 
     @PutMapping("/{id}")
-    public CategoryDto updateCategory(@PathVariable UUID id, @RequestParam String name) {
+    public CategoryDto updateCategory(
+            @PathVariable UUID id,
+            @RequestBody @Validated(OnUpdate.class) CategoryDto categoryDto
+    ) {
         Category category = categoryService.findByIdNN(id);
-        category.setName(name);
-        Category updatedCategory = categoryService.save(category);
-        return categoryMapper.toDto(updatedCategory);
+        category.setName(categoryDto.getName());
+        return categoryMapper.toDto(categoryService.save(category));
     }
 
     @DeleteMapping("/{id}")
+    @ResponseStatus(HttpStatus.NO_CONTENT)
     public void deleteCategory(@PathVariable UUID id) {
         categoryService.deleteById(id);
     }
